--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <h1>Добро пожаловать!</h1>
     <img src="images/photo1.jpg" alt="Фото 1">
     <img src="images/photo2.jpg" alt="Фото 2">
+    <picture>
+    <source srcset="images/photo1.webp" type="image/webp">
+    <img src="images/photo1.jpg" alt="Фото 1" loading="lazy">
+    </picture>
 </body>
 </html>
